# wildfly-2023-intern-demo

./: .gitignore  README.md  commands.sh  configure-wildfly.cli  demo-container.sh  main.py  pyproject.toml
