[tool.poetry]
name = "intern-presentation-demo"
version = "0.1.0"
description = ""
authors = ["Cameron Rodriguez <dev@camrod.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
cryptography = "^40.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
